Sketch of the updated ver
	modified:   .env
	modified:   .gitignore
	modified:   README.md
	modified:   commands.json
	modified:   docker-compose.yml
	modified:   package-lock.json
	modified:   package.json
	modified:   query-gateway/config/gateway-config.yml
	renamed:    query-gateway/scripts/checkKey.js -> scripts/checkKey.js
	new file:   scripts/exportWalletKeyAsJson.js
	new file:   scripts/getPeerIdFromGatewayKey.js
	new file:   scripts/package.json

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-DB_NAME=squid
-DB_PORT=23798
-GQL_PORT=4350
-# JSON-RPC node endpoint, both wss and https endpoints are accepted
-RPC_ENDPOINT=
+SUBSQUID_NETWORK_GATEWAY=https://v2.archive.subsquid.io
+SQD_DEBUG=*
