--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,21 @@
-version: "3"
+version: "3.8"
 
 services:
-  db:
-    image: postgres:15
+  query_gateway:
+    image: subsquid/query-gateway:0.2.8
     environment:
-      POSTGRES_DB: squid
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "${DB_PORT}:5432"
-    # command: ["postgres", "-c", "log_statement=all"]
-    shm_size: 1gb
-  query-gateway:
-    image: subsquid/query-gateway:0.1.9
-    environment:
-      BOOTSTRAP: "true"
       HTTP_LISTEN_ADDR: 0.0.0.0:8000
       BOOT_NODES: >
         12D3KooWSRvKpvNbsrGbLXGFZV7GYdcrYNh4W2nipwHHMYikzV58 /dns4/testnet.subsquid.io/tcp/22345,
         12D3KooWQC9tPzj2ShLn39RFHS5SGbvbP2pEd7bJ61kSW2LwxGSB /dns4/testnet.subsquid.io/tcp/22346,
         12D3KooWQER7HEpwsvqSzqzaiV36d3Bn6DZrnwEunnzS76pgZkMU /dns4/testnet.subsquid.io/tcp/32345
-      RPC_URL: https://arbitrum-goerli.publicnode.com/
-      KEY_PATH: /query-gateway/keys/snapshot.key
-      CONFIG_PATH: /query-gateway/config/gateway-config.yml
-      RUST_LOG: info,ethers_providers=warn
+      RPC_URL: https://sepolia-rollup.arbitrum.io/rpc
+      CONFIG_PATH: /app/data/config/gateway-config.yml
+      KEY_PATH: /app/data/keys/snapshotPhaseTwo.key
+      ALLOCATIONS_DB_PATH: /app/data/allocations.db
+    env_file:
+      - .contract-addrs
     volumes:
-      - ./query-gateway:/query-gateway
+      - ./query-gateway:/app/data
     ports:
-      - "8000:8000"
+      - "19174:8000"
