--- a/package.json
+++ b/package.json
@@ -5,20 +5,16 @@
     "build": "rm -rf lib && tsc"
   },
   "dependencies": {
-    "@subsquid/archive-registry": "^3.0.0",
-    "@subsquid/evm-processor": "^1.4.0",
-    "@subsquid/graphql-server": "^4.2.0",
-    "@subsquid/typeorm-migration": "^1.2.0",
-    "@subsquid/typeorm-store": "^1.2.0",
-    "dotenv": "^16.1.4",
-    "ethers": "^6.5.1",
-    "pg": "^8.11.0",
-    "typeorm": "^0.3.16"
+    "@belopash/mock-store": "^0.0.0",
+    "@subsquid/evm-processor": "^1.13.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@subsquid/evm-typegen": "^3.2.0",
-    "@subsquid/typeorm-codegen": "^1.2.0",
-    "@types/node": "^18.16.17",
-    "typescript": "~5.1.3"
+    "@inquirer/input": "^1.2.14",
+    "@inquirer/password": "^1.1.14",
+    "@types/node": "^20.11.5",
+    "ethereumjs-wallet": "^1.0.2",
+    "typescript": "~5.3.3",
+    "libp2p": "0.32.5"
   }
 }
